fix(filter-panel-overflow): leverage `getOverflowMenuOffset`

--- a/src/components/FilterPanel/FilterPanelCheckboxWithOverflowMenu/_index.scss
+++ b/src/components/FilterPanel/FilterPanelCheckboxWithOverflowMenu/_index.scss
@@ -27,7 +27,6 @@
     background-color: $field-01;
 
     > #{$block}__overflow-button {
-      top: 0;
       right: 0;
       height: $carbon--layout-02;
       width: $carbon--layout-02;
